// Copyright (c) Shubham Mishra. All rights reserved.
// Licensed under the MIT License.

syntax = "proto3";

package proto.checkpoint;
import "consensus.proto";


/////// DEPRECATED ///////
message ProtoBackFillRequest {
    uint64 block_start = 1;
    uint64 block_end = 2;
}

message ProtoBackFillResponse {
    proto.consensus.ProtoFork fork = 1;
}

////////////////////////////

message ProtoBlockHint {
    uint64 block_n = 1;
    bytes digest = 2;
}

message ProtoLaneBlockHints {
    string name = 1;
    repeated ProtoBlockHint hints = 2;
}

// Wrapper for repeated block hints (for oneof compatibility)
message ProtoBlockHintsWrapper {
    repeated ProtoBlockHint hints = 1;
}

message ProtoBackfillNack {
    oneof origin {
        proto.consensus.ProtoAppendEntries ae = 1;
        proto.consensus.ProtoViewChange vc = 2;
        proto.consensus.ProtoAppendBlockLane abl = 3;
    }

    oneof hints {
        ProtoBlockHintsWrapper blocks = 4;
        ProtoLaneBlockHints lane = 5;
    }
    uint64 last_index_needed = 6;
    string reply_name = 7;
}